--- a/place.html
+++ b/place.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Walter Muñoa Sosa">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Responsive Chamber of Commerce Page">
+    <meta name="description" content="Page of the Country, Chiapas in Mexico">
     <title>Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/place.css">
     <script src="scripts/place.js" defer></script>
@@ -13,7 +14,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>Chamber of Commerce</h1>
+        <h1>Chiapas, Mexico</h1>
     </header>
 
     <!-- Hero Section -->
@@ -27,14 +28,14 @@
     <section id="data">
         <h3>Data</h3>
         <ul>
-            <li><strong>Area:</strong> 587,041 sq km</li>
-            <li><strong>Population:</strong> 27,691,018</li>
-            <li><strong>Capital:</strong> Antananarivo</li>
-            <li><strong>Languages:</strong> Malagasy, French</li>
-            <li><strong>Currency:</strong> Malagasy Ariary</li>
-            <li><strong>Time Zone:</strong> UTC+3</li>
-            <li><strong>Calling Code:</strong> +261</li>
-            <li><strong>Internet TLD:</strong> .mg</li>
+            <li><strong>Area:</strong> 73,211 sq km</li>
+            <li><strong>Population:</strong> 5,544,000</li>
+            <li><strong>Capital:</strong> Tuxtla Gutierrez</li>
+            <li><strong>Languages:</strong> Spanish</li>
+            <li><strong>Currency:</strong> Mexican Peso</li>
+            <li><strong>Time Zone:</strong> UTC-6</li>
+            <li><strong>Calling Code:</strong> +52</li>
+            <li><strong>Internet TLD:</strong> .mx</li>
         </ul>
     </section>
 
