--- a/place.html
+++ b/place.html
@@ -17,37 +17,39 @@
         <h1>Chiapas, Mexico</h1>
     </header>
 
-    <!-- Hero Section -->
-    <section id="hero">
-        <picture>
-            <source srcset="images/guacamayas_chiapas_large.webp" media="(min-width: 768px)">
-            <img src="images/guacamayas_chiapas.webp" alt="Guacamayas in Chiapas">
-        </picture>
-    </section>
+    <main>
+        <!-- Hero Section -->
+        <section id="hero">
+            <picture>
+                <source srcset="images/guacamayas_chiapas_large.webp" media="(min-width: 768px)">
+                <img src="images/guacamayas_chiapas.webp" alt="Guacamayas in Chiapas">
+            </picture>
+        </section>
 
-    <section id="data">
-        <h3>Data</h3>
-        <ul>
-            <li><strong>Area:</strong> 73,211 sq km</li>
-            <li><strong>Population:</strong> 5,544,000</li>
-            <li><strong>Capital:</strong> Tuxtla Gutierrez</li>
-            <li><strong>Languages:</strong> Spanish</li>
-            <li><strong>Currency:</strong> Mexican Peso</li>
-            <li><strong>Time Zone:</strong> UTC-6</li>
-            <li><strong>Calling Code:</strong> +52</li>
-            <li><strong>Internet TLD:</strong> .mx</li>
-        </ul>
-    </section>
+        <section id="data">
+            <h3>Data</h3>
+            <ul>
+                <li><strong>Area:</strong> 73,211 sq km</li>
+                <li><strong>Population:</strong> 5,544,000</li>
+                <li><strong>Capital:</strong> Tuxtla Gutierrez</li>
+                <li><strong>Languages:</strong> Spanish</li>
+                <li><strong>Currency:</strong> Mexican Peso</li>
+                <li><strong>Time Zone:</strong> UTC-6</li>
+                <li><strong>Calling Code:</strong> +52</li>
+                <li><strong>Internet TLD:</strong> .mx</li>
+            </ul>
+        </section>
 
-    <!-- Weather Section -->
-    <section id="weather">
-        <h3>Weather</h3>
-        <span class="weather-icon">⛅</span>
-        <p>Temperature: <span id="temperature">10 °C</span></p>
-        <p>Wind Speed: <span id="wind-speed">5 km/h</span></p>
-        <p>Wind Chill: <span id="wind-chill">N/A</span></p>
-    </section>
-
+        <!-- Weather Section -->
+        <section id="weather">
+            <h3>Weather</h3>
+            <span class="weather-icon">⛅</span>
+            <p>Temperature: <span id="temperature">10 °C</span></p>
+            <p>Wind Speed: <span id="wind-speed">5 km/h</span></p>
+            <p>Wind Chill: <span id="wind-chill">N/A</span></p>
+        </section>
+    </main>
+    
     <!-- Footer -->
     <footer>
         <p>&copy; <span id="current-year"></span> Walter Muñoa Sosa - Chiapas</p>
