--- a/place.html
+++ b/place.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Walter Muñoa Sosa">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Page of the Country, Chiapas in Mexico">
-    <title>Chamber of Commerce</title>
+    <title>Chiapas, Mexico</title>
     <link rel="stylesheet" href="styles/place.css">
     <script src="scripts/place.js" defer></script>
 </head>
@@ -43,13 +43,13 @@
         <!-- Weather Section -->
         <section id="weather">
             <h3>Weather</h3>
-            <span class="weather-icon">⛅</span>
+            <span class="weather-icon"> <img src="images/1530374_weather_day_sand_sandstorm_sun_icon.svg"> </span>
             <p>Temperature: <span id="temperature">10 °C</span></p>
             <p>Wind Speed: <span id="wind-speed">5 km/h</span></p>
             <p>Wind Chill: <span id="wind-chill">N/A</span></p>
         </section>
     </main>
-    
+
     <!-- Footer -->
     <footer>
         <p>&copy; <span id="current-year"></span> Walter Muñoa Sosa - Chiapas</p>
