--- a/place.html
+++ b/place.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Page of the Country, Chiapas in Mexico">
     <title>Chiapas, Mexico</title>
     <link rel="stylesheet" href="styles/place.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Giga:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="scripts/place.js" defer></script>
 </head>
 
