--- a/place.html
+++ b/place.html
@@ -46,7 +46,7 @@
         <!-- Weather Section -->
         <section id="weather">
             <h3>Weather</h3>
-            <span class="weather-icon"> <img src="images/1530374_weather_day_sand_sandstorm_sun_icon.svg"> </span>
+            <span class="weather-icon"> <img src="images/1530374_weather_day_sand_sandstorm_sun_icon.svg" alt="Weather Icon"> </span>
             <p>Temperature: <span id="temperature">10 °C</span></p>
             <p>Wind Speed: <span id="wind-speed">5 km/h</span></p>
             <p>Wind Chill: <span id="wind-chill">N/A</span></p>
