google font added

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="This website contains an album of the temples of the Church of Jesus Christ of Latter-day Saints">
-    <meta name="author" content="Walter Muñoa">
+    <meta name="author" content="Walter Muñoa Sosa">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temple Album</title>
+    <title>Temple Filtered Album</title>
     <link rel="stylesheet" href="styles/filtered-temples.css">
     <link rel="stylesheet" href="styles/filtered-temples-large.css" media="screen and (min-width: 768px)">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script src="scripts/filtered-temples.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Temple Album</h1>
+        <h1>Temple Filtered Album</h1>
         <nav>
             <button class="hamburger">&#9776;</button>
             <ul class="nav-menu">
